# SecurePay-Payment-Processing-Prototype

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: appcontroller.cpp  appcontroller.h  bank.cpp  bank.h  customer.cpp  customer.h  fraudsystem.cpp  fraudsystem.h  paymentgateway.cpp  paymentgateway.h  paymentmethod.cpp  paymentmethod.h  transaction.cpp  transaction.h
src/gui/: addcustomerdialog.cpp  addcustomerdialog.h  mainwindow.cpp  mainwindow.h
